external agent attach